syntax = "proto3";

package hiqidashi;

import "google/protobuf/wrappers.proto";

option go_package = "github.com/hackathon-21winter-05/HiQidas/server/pb/ws";

message WsSendHiqidashi { Hiqidashi hiqidashi = 1; }

message WsSendHiqidashis { repeated Hiqidashi hiqidashis = 1; }

message WsCreateHiqidashi { string parent_id = 1; }

message WsEditHiqidashi {
  string id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue drawing = 3;
  google.protobuf.StringValue color_code = 4;
}

message WsDeleteHiqidashi { string id = 1; }

// Hiqidashiの基本的な情報
message Hiqidashi {
  string id = 1;
  string creator_id = 2;
  google.protobuf.StringValue parent_id = 3;
  string title = 4;
  string description = 5;
  google.protobuf.StringValue drawing = 6;
  string color_code = 7;
}
